<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cadastra_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.fiap.notas.CadastraLoginActivity">



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtNome"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:layout_marginTop="10dp"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtSobrenome"
        android:hint="@string/sobrenome"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/rgSexo">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbFeminino"
            android:text="@string/feminino"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbMasculino"
            android:text="@string/masculino"/>

    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtDataNascimento"
        android:hint="@string/data_de_nascimento"
        android:inputType="date"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtEmail"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtSenha"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnGravarChaves"
        android:text="@string/gravar_dados"
        android:textStyle="bold"
        style="@style/AppTheme.ButtonPrimaryDark"
        android:layout_marginTop="10dp"
        android:onClick="gravarChaves"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnExcluirDados"
            android:text="@string/excluir_dados"
            android:textStyle="bold"
            style="@style/AppTheme.ButtonPrimaryDark"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:onClick="excluirArquivo"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCarregarChaves"
            android:text="@string/carregar_dados"
            android:textStyle="bold"
            style="@style/AppTheme.ButtonPrimaryDark"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:onClick="carregarChaves"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnVerificarChaves"
            android:text="@string/verificar_dados"
            android:textStyle="bold"
            style="@style/AppTheme.ButtonPrimaryDark"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:onClick=""
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLerArquivo"
            android:text="@string/ler_arquivo"
            android:textStyle="bold"
            style="@style/AppTheme.ButtonPrimaryDark"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnGravarArquivo"
            android:text="@string/gravar_arquivo"
            android:textStyle="bold"
            style="@style/AppTheme.ButtonPrimaryDark"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnExcluirArquivo"
            android:text="@string/excluir_arquivo"
            android:textStyle="bold"
            style="@style/AppTheme.ButtonPrimaryDark"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnFechar"
        android:text="@string/fechar_e_retornar"
        android:textStyle="bold"
        style="@style/AppTheme.ButtonPrimaryDark"
        android:layout_marginTop="10dp"
        />


</LinearLayout>
</ScrollView>